--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -9,7 +9,7 @@ body,
 }
 
 html.dark {
-  background: #121212;
+  @apply bg-gray-900;
 }
 
 #nprogress {
@@ -35,9 +35,22 @@ html.dark {
     disabled:cursor-default disabled:bg-gray-600 disabled:opacity-50;
 }
 
-.icon-btn {
-  @apply inline-block cursor-pointer select-none
+.icon-btn,
+.nav-btn {
+  @apply cursor-pointer select-none
     opacity-75 transition duration-200 ease-in-out
     hover:opacity-100 hover:text-teal-600;
-  font-size: 0.9em;
+}
+
+.icon-btn {
+  @apply flex text-left justify-between;
+}
+
+header {
+  @apply flex-grow;
+}
+
+footer {
+  @apply border-t-gray-400 border-t-1 mt-6 py-6
+  text-gray-400 text-center;
 }
